feat: DB-first multi-source job aggregation architecture with background sync
- Implement PostgreSQL as primary store for recommendations (avoid external API calls on every request)
- Add JobDeduplicationService: 3-layer deduplication, upsert/refresh logic, and job expiration lifecycle
- Add JobSyncScheduler: configurable background synchronization (JOB_SYNC_INTERVAL_HOURS / JOB_SYNC_INTERVAL_MS)
- Add Freshness & Fallback policy: Case A (DB-first fresh jobs >= threshold), Case B (insufficient jobs trigger ingestion), Case C (graceful fallback on API failure)
- Enable @EnableScheduling in Spring Boot application
- Update NormalizedJob DTO & JPA entity with postedAt, fetchedAt, expiresAt, isActive, createdAt, updatedAt
- Update recommendation response DTO with standard root fields (jobId, title, company, location, source, matchScore, explanation, applyUrl)